// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render colour blocks colour wrapped 1`] = `
"<p><strong>before bold text</strong>
before text</p>
<div style=\\"color: red\\">
<h1>Start of colour heading</h1>
<p><strong>bold text</strong></p>
<p>plain text</p>
<h1>HTML Heading</h1>
<p>This is HTML inline <strong>bold</strong> text</p>
<p>another paragraph inline HTML</p>
</div>
<p><strong>after colour bold text</strong></p>
<h1>Another Heading after colour</h1>
"
`;

exports[`render colour blocks parse colour when no new lines between colour 1`] = `
"<p><strong>before bold text</strong>
before text</p>
<div style=\\"color: red\\">
<h1>Start of colour heading</h1>
<p><strong>bold text</strong></p>
<p>plain text</p>
<h1>HTML Heading</h1>
<p>This is HTML inline <strong>bold</strong> text</p>
<p>another paragraph inline HTML</p>
</div>
<p><strong>after colour bold text</strong></p>
<h1>Another Heading after colour</h1>
"
`;

exports[`render soundcloud blocks content before and after 1`] = `
"<p><strong>bold text</strong> before text 
<iframe src=\\"https://w.soundcloud.com/player/?url=https://soundcloud.com/iamcardib/wap-feat-megan-thee-stallion&amp;color=%23ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true\\" height=\\"300\\" width=\\"100%\\"></iframe>
 after text <strong>bold</strong></p>
"
`;

exports[`render soundcloud blocks multiple occurrences 1`] = `
"<p>
<iframe src=\\"https://w.soundcloud.com/player/?url=https://soundcloud.com/iamcardib/wap-feat-megan-thee-stallion&amp;color=%23ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true\\" height=\\"300\\" width=\\"100%\\"></iframe>
 
<iframe src=\\"https://w.soundcloud.com/player/?url=https://soundcloud.com/iamcardib/wap-feat-megan-thee-stallion&amp;color=%23ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true\\" height=\\"300\\" width=\\"100%\\"></iframe>
 
<iframe src=\\"https://w.soundcloud.com/player/?url=https://soundcloud.com/iamcardib/wap-feat-megan-thee-stallion&amp;color=%23ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true\\" height=\\"300\\" width=\\"100%\\"></iframe>
 
<iframe src=\\"https://w.soundcloud.com/player/?url=https://soundcloud.com/iamcardib/wap-feat-megan-thee-stallion&amp;color=%23ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true\\" height=\\"300\\" width=\\"100%\\"></iframe>
</p>
"
`;

exports[`render soundcloud blocks single line 1`] = `
"<p>
<iframe src=\\"https://w.soundcloud.com/player/?url=https://soundcloud.com/iamcardib/wap-feat-megan-thee-stallion&amp;color=%23ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true\\" height=\\"300\\" width=\\"100%\\"></iframe>
</p>
"
`;

exports[`render youtube blocks repeated youtube 1`] = `
"<p>
</p><div class=\\"ggsmark-youtube\\">
<iframe type=\\"text/html\\" src=\\"https://www.youtube.com/embed/\${splitText[index]}\\"></iframe>
</div>
 
<div class=\\"ggsmark-youtube\\">
<iframe type=\\"text/html\\" src=\\"https://www.youtube.com/embed/\${splitText[index]}\\"></iframe>
</div>
 :youtube http://www.youshit.com<p></p>
"
`;

exports[`render youtube blocks repeated youtube with text before and after 1`] = `
"<p><strong>bold</strong> string before comyoutube :youtube http://www.youtube./watch?v=52c_QSg64fs after youtube 
</p><div class=\\"ggsmark-youtube\\">
<iframe type=\\"text/html\\" src=\\"https://www.youtube.com/embed/\${splitText[index]}\\"></iframe>
</div>
 <em>italics</em>
soft new line<p></p>
<p>new line</p>
"
`;

exports[`render youtube blocks youtube with timestamp 1`] = `
"<p>
</p><div class=\\"ggsmark-youtube\\">
<iframe type=\\"text/html\\" src=\\"https://www.youtube.com/embed/\${splitText[index]}\\"></iframe>
</div>
<p></p>
"
`;
